ADDED AND FIXED database gets initilized by application properties. Database schema renamed to 'bricks' password was changed to. Also minor gradle dependencies hanged.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:23306/bricks
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.datasource.initialization-mode=always
